# web-search

./: .dockerignore  .env.example  .env.prod.example  .gitignore  DEPLOYMENT.md  Dockerfile  STARTUP.md  dev.bat  docker-compose.cloudflare.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  fetch_embed.py  package-lock.json  package.json  test_video.py  vite.config.js
src-python/: alembic.ini  pyproject.toml  requirements.txt
src-python/alembic/: env.py
src-python/alembic/versions/: 001_add_video_stream_url.py  002_add_content_type.py  003_add_youtube_metadata.py  004_add_collection_watch_fields.py
src-python/app/: __init__.py  config.py  database.py  main.py
src-python/app/api/: __init__.py  accounts.py  auth.py  backfill.py  channels.py  collections.py  crawl.py  deps.py  discover.py  download.py  feed.py  hidden_channels.py  indexes.py  playlists.py  saved_videos.py  search.py  settings.py  sources.py  stream.py  transcription.py  users.py
src-python/app/models/: __init__.py  api_key.py  channel.py  chapter.py  collection.py  crawl_job.py  feed_item.py  index.py  page.py  platform_account.py  playlist.py  preset.py  saved_video.py  settings.py  source.py  transcript.py  user.py  user_hidden_channel.py  user_session.py  user_watch_state.py
src-python/app/schemas/: __init__.py  channel.py  collection.py  discover.py  feed.py  hidden_channel.py  index.py  playlist.py  saved_video.py  search.py  settings.py  source.py  transcription.py
src-python/migrations/: 002_create_collections_tables.py
src-python/scripts/: fix_all_dates.py
(+125 files in other folders)
